Added fluid spaces for the layout
Fluid spaces for the layout Padding and Gap.

--- a/assets/css/layout.css
+++ b/assets/css/layout.css
@@ -25,6 +25,7 @@
 .row {
     width: 100%;
     max-width: var(--row-width);
-    padding: 32px;
+    padding: var(--layout-space-md);
     margin: 0 auto;
+    gap: var(--layout-space-md);
 }
