--- a/assets/css/variables.css
+++ b/assets/css/variables.css
@@ -7,6 +7,15 @@
 :root {
     font-size: 62.5%; /* Because 62.5% of 16px is 10px. Which makes 1rem = 10px. */
     --font-size-body: 1.6rem;
+
+
+    /*** Fluid spaces for the layout Padding and Gap ***/
+    --layout-space: clamp(2rem, 2.5vw, 4.8rem);
+    --layout-space-xl: calc(var(--layout-space) * 4);
+    --layout-space-lg: calc(var(--layout-space) * 2);
+    --layout-space-md: var(--layout-space);
+    --layout-space-sm: calc(var(--layout-space) / 2);
+    --layout-space-xs: calc(var(--layout-space) / 4);
 }
 
 @media only screen and (min-width: 1281px) {
