--- a/assets/css/utilities.css
+++ b/assets/css/utilities.css
@@ -1,5 +1,13 @@
 /*****
  ***
- ***   Utilities
+ ***   Utilities: Layout
  ***
 *****/
+
+.flex {
+    display: flex;
+}
+
+.grid {
+    display: grid;
+}
