--- a/assets/css/layout.css
+++ b/assets/css/layout.css
@@ -29,3 +29,122 @@
     margin: 0 auto;
     gap: var(--layout-space-md);
 }
+
+/*****
+ ***
+ ***   Layout: Grid Columns
+ ***
+*****/
+
+.grid-cols {
+    grid-template-columns: repeat(12, 1fr);
+}
+
+.grid-cols--fit-lg {
+    grid-template-columns: repeat(auto-fit, minmax(min(400px, 100%), 1fr));
+}
+
+.grid-cols--fit-md {
+    grid-template-columns: repeat(auto-fit, minmax(min(320px, 100%), 1fr));
+}
+
+.grid-cols--fit-sm {
+    grid-template-columns: repeat(auto-fit, minmax(min(240px, 100%), 1fr));
+}
+
+@media only screen and (max-width: 720px) {
+
+    .grid-cols {
+        grid-template-columns: repeat(6, 1fr);
+    }
+}
+
+/*****
+ ***
+ ***   Layout: Grid Columns Span
+ ***
+*****/
+
+.col-span-12 {
+    grid-column: span 12;
+}
+
+.col-span-11 {
+    grid-column: span 11;
+}
+
+.col-span-10 {
+    grid-column: span 10;
+}
+
+.col-span-9 {
+    grid-column: span 9;
+}
+
+.col-span-8 {
+    grid-column: span 8;
+}
+
+.col-span-7 {
+    grid-column: span 7;
+}
+
+.col-span-6 {
+    grid-column: span 6;
+}
+
+.col-span-5 {
+    grid-column: span 5;
+}
+
+.col-span-4 {
+    grid-column: span 4;
+}
+
+.col-span-3 {
+    grid-column: span 3;
+}
+
+.col-span-2 {
+    grid-column: span 2;
+}
+
+.col-span-1 {
+    grid-column: span 1;
+}
+
+.col-2-span-10 {
+    grid-column: 2 / span 10;
+}
+
+.col-3-span-8 {
+    grid-column: 3 / span 8;
+}
+
+.col-4-span-6 {
+    grid-column: 4 / span 6;
+}
+
+@media only screen and (max-width: 720px) {
+
+    .col-span-12,
+    .col-span-11,
+    .col-span-10,
+    .col-span-9,
+    .col-span-8,
+    .col-span-7,
+    .col-span-6,
+    .col-span-5,
+    .col-span-4,
+    .col-span-3,
+    .col-span-2,
+    .col-span-1 {
+        grid-column: span 6;
+    }
+
+    .col-2-span-10,
+    .col-3-span-8,
+    .col-4-span-6 {
+        grid-column: span 6;
+    }
+}
