--- a/assets/css/typography.css
+++ b/assets/css/typography.css
@@ -1,6 +1,6 @@
 /*****
  ***
- ***   Typography
+ ***   Typography: Font, Size & Color
  ***
 *****/
 
@@ -10,4 +10,64 @@ body {
     font-weight: 400;
     line-height: 1.25;
     color: black;
+}
+
+h1, h2, h3, h4, h5, h6 {
+    font-weight: 700;
+    line-height: 1.2;
+}
+
+h1 {
+    font-size: clamp(3.2rem, 3vw + var(--relative-size), 5.6rem); 
+}
+
+h2 {
+    font-size: clamp(2.6rem, 2vw + var(--relative-size), 4rem);
+}
+
+h3 {
+    font-size: clamp(2.2rem, 1.5vw + var(--relative-size), 2.8rem);
+}
+
+h4 {
+    font-size: clamp(1.8rem, 1.25vw + var(--relative-size), 2.4rem);
+}
+
+h5 {
+    font-size: clamp(1.6rem, 1.125vw + var(--relative-size), 2.2rem);
+}
+
+h6 {
+    font-size: clamp(1.4rem, 1vw + var(--relative-size), 1.8rem);
+}
+
+p, li {
+    font-size: clamp(1.6rem, 0.5vw + var(--relative-size), 1.8rem);
+    line-height: 1.5;
+}
+
+/*****
+ ***
+ ***   Typography: Space
+ ***
+*****/
+
+.col > * + * {
+	margin-top: var(--content-space-xl);
+}
+
+.col > p + p {
+	margin-top: var(--content-space-lg);
+}
+
+.col > :is(h1, h2) + * {
+	margin-top: var(--content-space-lg);
+}
+
+.col > :is(h3, h4) + * {
+	margin-top: var(--content-space-md);
+}
+
+.col > :is(h5, h6) + * {
+	margin-top: var(--content-space-sm);
 }
