--- a/assets/css/utilities.css
+++ b/assets/css/utilities.css
@@ -11,3 +11,21 @@
 .grid {
     display: grid;
 }
+
+/*****
+ ***
+ ***    Utilities: Typography
+ ***
+*****/
+
+.text-lg {
+    font-size: clamp(1.7rem, 0.75vw + var(--relative-size), 2.0rem);
+}
+
+.text-md {
+    font-size: clamp(1.6rem, 0.5vw + var(--relative-size), 1.8rem);
+}
+
+.text-sm {
+    font-size: clamp(1.4rem, 0.4vw + var(--relative-size), 1.6rem);
+}
