--- a/assets/css/layout.css
+++ b/assets/css/layout.css
@@ -52,7 +52,7 @@
     grid-template-columns: repeat(auto-fit, minmax(min(240px, 100%), 1fr));
 }
 
-@media only screen and (max-width: 720px) {
+@media only screen and (max-width: 479px) {
 
     .grid-cols {
         grid-template-columns: repeat(6, 1fr);
@@ -125,7 +125,40 @@
     grid-column: 4 / span 6;
 }
 
-@media only screen and (max-width: 720px) {
+@media screen and (max-width: 960px) and (min-width: 479px) {
+    
+    .cols-same .col-span-2 {
+        grid-column: span 4;
+    }
+}
+
+@media screen and (max-width: 800px) and (min-width: 479px) {
+    
+    .cols-same .col-span-3 {
+        grid-column: span 6;
+    }
+}
+
+@media screen and (max-width: 640px) and (min-width: 479px) {
+
+    .cols-same .col-span-6 {
+        grid-column: span 12;
+    }
+
+    .cols-same .col-span-4 {
+        grid-column: span 12;
+    }
+}
+
+@media screen and (max-width: 479px) {
+    
+    .cols-same .col-span-3,
+    .cols-same .col-span-2 {
+        grid-column: span 3;
+    }
+}
+
+@media only screen and (max-width: 479px) {
 
     .col-span-12,
     .col-span-11,
