--- a/assets/css/layout.css
+++ b/assets/css/layout.css
@@ -37,26 +37,19 @@
 *****/
 
 .grid-cols {
-    grid-template-columns: repeat(12, 1fr);
+    grid-template-columns: repeat(var(--grid-cols-number), 1fr);
 }
 
 .grid-cols--fit-lg {
-    grid-template-columns: repeat(auto-fit, minmax(min(400px, 100%), 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(min(var(--auto-fit-lg), 100%), 1fr));
 }
 
 .grid-cols--fit-md {
-    grid-template-columns: repeat(auto-fit, minmax(min(320px, 100%), 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(min(var(--auto-fit-md), 100%), 1fr));
 }
 
 .grid-cols--fit-sm {
-    grid-template-columns: repeat(auto-fit, minmax(min(240px, 100%), 1fr));
-}
-
-@media only screen and (max-width: 479px) {
-
-    .grid-cols {
-        grid-template-columns: repeat(6, 1fr);
-    }
+    grid-template-columns: repeat(auto-fit, minmax(min(var(--auto-fit-sm), 100%), 1fr));
 }
 
 /*****
@@ -125,40 +118,39 @@
     grid-column: 4 / span 6;
 }
 
-@media screen and (max-width: 960px) and (min-width: 479px) {
-    
-    .cols-same .col-span-2 {
+@media screen and (min-width: 1120px) {
+
+    .cols-span-2 .col {
+        grid-column: span 2;
+    }
+}
+
+@media screen and (max-width: 1119px) and (min-width: 640px) {
+
+    .cols-span-2 .col {
         grid-column: span 4;
     }
 }
 
-@media screen and (max-width: 800px) and (min-width: 479px) {
+@media screen and (max-width: 799px) and (min-width: 640px) {
     
-    .cols-same .col-span-3 {
+    .cols-span-3 .col {
         grid-column: span 6;
     }
 }
 
-@media screen and (max-width: 640px) and (min-width: 479px) {
+@media screen and (min-width: 640px) {
 
-    .cols-same .col-span-6 {
-        grid-column: span 12;
+    .cols-span-6 .col {
+        grid-column: span 6;
     }
 
-    .cols-same .col-span-4 {
-        grid-column: span 12;
-    }
-}
-
-@media screen and (max-width: 479px) {
-    
-    .cols-same .col-span-3,
-    .cols-same .col-span-2 {
+    .cols-span-3 .col {
         grid-column: span 3;
     }
 }
 
-@media only screen and (max-width: 479px) {
+@media only screen and (max-width: 639px) {
 
     .col-span-12,
     .col-span-11,
@@ -171,13 +163,19 @@
     .col-span-4,
     .col-span-3,
     .col-span-2,
-    .col-span-1 {
-        grid-column: span 6;
-    }
-
+    .col-span-1,
     .col-2-span-10,
     .col-3-span-8,
     .col-4-span-6 {
         grid-column: span 6;
+    }
+
+    .cols-span-6 .col {
+        grid-column: span 6;
+    }
+
+    .cols-span-3 .col,
+    .cols-span-2 .col {
+        grid-column: span 3;
     }
 }
