--- a/assets/css/variables.css
+++ b/assets/css/variables.css
@@ -44,7 +44,7 @@
     }
 }
 
-@media screen and (max-width: 1119px) {
+@media only screen and (max-width: 1119px) {
     :root {
         /*** ***/
         --row-width: 100%;
