Changes in class names and layout structure

--- a/assets/css/layout.css
+++ b/assets/css/layout.css
@@ -16,13 +16,13 @@
  ***
 *****/
 
-.header__rows,
-.content__rows,
-.footer__rows {
+.header__row,
+.content__row,
+.footer__row {
     width: 100%;
 }
 
-.row {
+:is(.header__row, .content__row, .footer__row) > div {
     width: 100%;
     max-width: var(--row-width);
     padding: var(--layout-space-md);
@@ -106,6 +106,8 @@
     grid-column: span 1;
 }
 
+/*** ***/
+
 .col-2-span-10 {
     grid-column: 2 / span 10;
 }
@@ -117,6 +119,8 @@
 .col-4-span-6 {
     grid-column: 4 / span 6;
 }
+
+/*** ***/
 
 @media only screen and (min-width: 1120px) {
 
