--- a/assets/css/layout.css
+++ b/assets/css/layout.css
@@ -36,27 +36,27 @@
  ***
 *****/
 
-.grid-cols {
-    grid-template-columns: repeat(var(--grid-cols-number), 1fr);
-}
-
-.grid-cols--fit-lg {
+.grid-cols-fit-lg {
     grid-template-columns: repeat(auto-fit, minmax(min(var(--auto-fit-lg), 100%), 1fr));
 }
 
-.grid-cols--fit-md {
+.grid-cols-fit-md {
     grid-template-columns: repeat(auto-fit, minmax(min(var(--auto-fit-md), 100%), 1fr));
 }
 
-.grid-cols--fit-sm {
+.grid-cols-fit-sm {
     grid-template-columns: repeat(auto-fit, minmax(min(var(--auto-fit-sm), 100%), 1fr));
 }
 
 /*****
  ***
- ***   Layout: Grid Columns Span
+ ***   Layout: Grid Columns & Span
  ***
 *****/
+
+.grid-cols {
+    grid-template-columns: repeat(var(--grid-cols-number), 1fr);
+}
 
 .col-span-12 {
     grid-column: span 12;
@@ -120,44 +120,7 @@
     grid-column: 4 / span 6;
 }
 
-/*** ***/
-
-@media only screen and (min-width: 1120px) {
-
-    .cols-span-2 .col {
-        grid-column: span 2;
-    }
-}
-
-@media only screen and (max-width: 1119px) and (min-width: 640px) {
-
-    .cols-span-2 .col {
-        grid-column: span 4;
-    }
-}
-
-@media only screen and (min-width: 800px) {
-
-    .cols-span-3 .col {
-        grid-column: span 3;
-    }
-}
-
-@media only screen and (max-width: 799px) and (min-width: 640px) {
-
-    .cols-span-3 .col {
-        grid-column: span 6;
-    }
-}
-
-@media only screen and (min-width: 640px) {
-
-    .cols-span-6 .col {
-        grid-column: span 6;
-    }
-}
-
-@media only screen and (max-width: 639px) {
+@media only screen and (max-width: 959px) {
 
     .col-span-12,
     .col-span-11,
@@ -176,13 +139,118 @@
     .col-4-span-6 {
         grid-column: span 6;
     }
+}
+
+/*****
+ ***
+ ***   Layout: Grid Colums Group
+ ***
+*****/
+
+@media only screen and (min-width: 1120px) {
+
+    .cols-span-2 .col {
+        grid-column: span 2;
+    }
+}
+
+@media only screen and (max-width: 1119px) and (min-width: 960px) {
+
+    .cols-span-2 .col {
+        grid-column: span 4;
+    }
+}
+
+@media only screen and (min-width: 960px) {
 
     .cols-span-6 .col {
         grid-column: span 6;
     }
 
-    .cols-span-3 .col,
+    .cols-span-3 .col {
+        grid-column: span 3;
+    }
+}
+
+@media only screen and (max-width: 959px) and (min-width: 800px) {
+
+    .cols-span-6 .col {
+        grid-column: span 3;
+    }
+}
+
+@media only screen and (max-width: 959px) and (min-width: 560px) {
+
+    .cols-span-2 .col {
+        grid-column: span 2;
+    }
+}
+
+@media only screen and (max-width: 959px)  {
+
+    .cols-span-3 .col {
+        grid-column: span 3;
+    }
+}
+
+@media only screen and (max-width: 799px) {
+
+    .cols-span-6 .col {
+        grid-column: span 6;
+    }
+}
+
+@media only screen and (max-width: 559px) {
+
     .cols-span-2 .col {
         grid-column: span 3;
+    }
+}
+
+/*****
+ ***
+ ***   Layout: Grid Columns Fixed
+ ***
+*****/
+
+.grid-cols-1 {
+    grid-template-columns: repeat(1, 1fr);
+}
+
+.grid-cols-2 {
+    grid-template-columns: repeat(2, 1fr);
+}
+
+.grid-cols-3 {
+    grid-template-columns: repeat(3, 1fr);
+}
+
+.grid-cols-4 {
+    grid-template-columns: repeat(4, 1fr);
+}
+
+.grid-cols-6 {
+    grid-template-columns: repeat(6, 1fr);
+}
+
+@media only screen and (max-width: 959px) {
+
+    .grid-cols-3 {
+        grid-template-columns: repeat(1, 1fr);
+    }
+
+    .grid-cols-4 {
+        grid-template-columns: repeat(2, 1fr);
+    }
+
+    .grid-cols-6 {
+        grid-template-columns: repeat(3, 1fr);
+    }
+}
+
+@media only screen and (max-width: 799px) {
+    
+    .grid-cols-3 {
+        grid-template-columns: repeat(1, 1fr);
     }
 }
