--- a/assets/css/typography.css
+++ b/assets/css/typography.css
@@ -48,6 +48,21 @@ p, li {
 
 /*****
  ***
+ ***   Typography: Blockquote
+ ***
+*****/
+
+blockquote span {
+    font-size: clamp(1.8rem, 1.25vw + var(--relative-size), 2.4rem);
+    font-style: italic;
+}
+
+blockquote cite {
+    font-size: clamp(1.4rem, 0.4vw + var(--relative-size), 1.6rem);
+}
+
+/*****
+ ***
  ***   Typography: Space
  ***
 *****/
