--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -6,14 +6,14 @@
 
 blockquote span {
     display: block;
-    margin-bottom: var(--layout-space-xs);
+    margin-bottom: var(--content-space-xs);
 }
 
-blockquote span::before {
+blockquote span::before, q::before {
     content: "\"";
 }
 
-blockquote span::after {
+blockquote span::after, q::after {
     content: "\"";
 }
 
