--- a/assets/css/typography.css
+++ b/assets/css/typography.css
@@ -5,52 +5,52 @@
 *****/
 
 body {
-    font-family: var(--font-family-body);
-    font-size: var(--font-size-body);
-    font-weight: var(--font-weight-body);
-    line-height: var(--line-height-md);
+    font-family: var(--font-family-body, sans-serif);
+    font-size: var(--font-size-body, 1.6rem);
+    font-weight: var(--font-weight-body, 400);
+    line-height: var(--line-height-md, 1.5);
 }
 
 h1, h2, h3, h4, h5, h6 {
-    font-family: var(--font-family-heading);
-    font-weight: var(--font-weight-heading);
-    line-height: var(--line-height-sm);
+    font-family: var(--font-family-heading, sans-serif);
+    font-weight: var(--font-weight-heading, 400);
+    line-height: var(--line-height-sm, 1.25);
 }
 
 h1 {
-    font-size: var(--font-size-h1);
+    font-size: var(--font-size-h1, 3.2rem);
 }
 
 h2 {
-    font-size: var(--font-size-h2);
+    font-size: var(--font-size-h2, 2.6rem);
 }
 
 h3 {
-    font-size: var(--font-size-h3);
+    font-size: var(--font-size-h3, 2.2rem);
 }
 
 h4 {
-    font-size: var(--font-size-h4);
+    font-size: var(--font-size-h4, 1.8rem);
 }
 
 h5 {
-    font-size: var(--font-size-h5);
+    font-size: var(--font-size-h5, 1.6rem);
 }
 
 h6 {
-    font-size: var(--font-size-h6);
+    font-size: var(--font-size-h6, 1.4rem);
 }
 
 p, li {
-    font-size: var(--font-size-md);
+    font-size: var(--font-size-md, 1.6rem);
 }
 
 strong {
-    font-weight: var(--font-weight-strong);
+    font-weight: var(--font-weight-strong, 700);
 }
 
 a:link {
-    font-weight: var(--font-weight-link);
+    font-weight: var(--font-weight-link, 700);
 }
 
 i, q {
@@ -66,7 +66,7 @@ s {
 }
 
 small {
-    font-size: var(--font-size-sm);
+    font-size: var(--font-size-sm, 1.4rem);
 }
 
 /*****
@@ -84,7 +84,7 @@ blockquote span {
 }
 
 blockquote cite {
-    font-size: var(--font-size-lg);
+    font-size: var(--font-size-lg, 1.8rem);
 }
 
 /*****
