--- a/assets/css/variables.css
+++ b/assets/css/variables.css
@@ -9,7 +9,7 @@
     --font-size-body: 1.6rem;
     --relative-size: 1rem;
 
-    /*** Fluid spaces for the layout Padding and Gap ***/
+    /*** Values for Fluid Layout Spaces: margin, padding and gap ***/
     --layout-space: clamp(2rem, 2.5vw, 4.8rem);
     --layout-space-xl: calc(var(--layout-space) * 4);
     --layout-space-lg: calc(var(--layout-space) * 2);
@@ -17,7 +17,7 @@
     --layout-space-sm: calc(var(--layout-space) / 2);
     --layout-space-xs: calc(var(--layout-space) / 4);
 
-    /*** Fluid spaces for the content ***/
+    /*** Values for Fluid Content Spaces: margin & padding ***/
     --content-space: clamp(2rem, 2vw, 2.8rem);
     --content-space-xl: calc(var(--content-space) + 0.8rem);
     --content-space-lg: calc(var(--content-space) + 0.4rem);
@@ -25,7 +25,7 @@
     --content-space-sm: calc(var(--content-space) - 0.8rem);
     --content-space-xs: calc(var(--content-space) - 1.2rem);
 
-    /*** Values of Typography variables ***/
+    /*** Values for Fluid Typography ***/
     --font-size-h1: clamp(3.2rem, 3vw + var(--relative-size), 5.6rem);
     --font-size-h2: clamp(2.6rem, 2vw + var(--relative-size), 4rem);
     --font-size-h3: clamp(2.2rem, 1.5vw + var(--relative-size), 2.8rem);
@@ -37,9 +37,10 @@
     --font-size-md: clamp(1.6rem, 0.6vw + var(--relative-size), 1.8rem);
     --font-size-sm: clamp(1.4rem, 0.45vw + var(--relative-size), 1.6rem);
 
-    --line-height-lg: 1.8;
+    /*** Values for Typography ***/
+    --line-height-lg: 1.75;
     --line-height-md: 1.5;
-    --line-height-sm: 1.2;
+    --line-height-sm: 1.25;
 
     --font-weight-body: 400;
     --font-weight-heading: 700;
