--- a/assets/css/variables.css
+++ b/assets/css/variables.css
@@ -49,6 +49,44 @@
 
     --font-family-body: sans-serif;
     --font-family-heading: sans-serif;
+
+    /*** Values for Colors ***/
+
+    --color-primary: 192, 92%;
+    --color-primary-10: hsla(var(--color-primary), 95%, 100%);
+    --color-primary-20: hsla(var(--color-primary), 85%, 100%);
+    --color-primary-30: hsla(var(--color-primary), 60%, 100%);
+    --color-primary-40: hsla(var(--color-primary), 50%, 100%);
+    --color-primary-50: hsla(var(--color-primary), 45%, 100%);
+    --color-primary-60: hsla(var(--color-primary), 30%, 100%);
+    --color-primary-70: hsla(var(--color-primary), 10%, 100%);
+
+    --color-secondary: 224, 80%;
+    --color-secondary-10: hsla(var(--color-secondary), 95%, 100%);
+    --color-secondary-20: hsla(var(--color-secondary), 85%, 100%);
+    --color-secondary-30: hsla(var(--color-secondary), 50%, 100%);
+    --color-secondary-40: hsla(var(--color-secondary), 40%, 100%);
+    --color-secondary-50: hsla(var(--color-secondary), 25%, 100%);
+    --color-secondary-60: hsla(var(--color-secondary), 15%, 100%);
+    --color-secondary-70: hsla(var(--color-secondary), 5%, 100%);
+
+    --color-accent: 170, 88%;
+    --color-accent-10: hsla(var(--color-accent), 95%, 100%);
+    --color-accent-20: hsla(var(--color-accent), 85%, 100%);
+    --color-accent-30: hsla(var(--color-accent), 60%, 100%);
+    --color-accent-40: hsla(var(--color-accent), 50%, 100%);
+    --color-accent-50: hsla(var(--color-accent), 45%, 100%);
+    --color-accent-60: hsla(var(--color-accent), 30%, 100%);
+    --color-accent-70: hsla(var(--color-accent), 10%, 100%);
+    
+    --color-neutral: 216, 8%;
+    --color-neutral-10: hsla(var(--color-neutral), 95%, 100%);
+    --color-neutral-20: hsla(var(--color-neutral), 90%, 100%);
+    --color-neutral-30: hsla(var(--color-neutral), 80%, 100%);
+    --color-neutral-40: hsla(var(--color-neutral), 70%, 100%);
+    --color-neutral-50: hsla(var(--color-neutral), 60%, 100%);
+    --color-neutral-60: hsla(var(--color-neutral), 30%, 100%);
+    --color-neutral-70: hsla(var(--color-neutral), 15%, 100%);
 }
 
 /*****
