Added classes for extra small & large font size

--- a/assets/css/theme.css
+++ b/assets/css/theme.css
@@ -78,6 +78,7 @@ nav {
     display: flex;
     align-items: center;
     justify-content: center;
+    font-size: var(--font-size-sm, 1.4rem);
     /* color: white; */
 }
 
